tests/ui/frontmatter/unclosed-1.rs
----cargo
//~^ ERROR: unclosed frontmatter
//~| ERROR: frontmatters are experimental

//@ compile-flags: --crate-type lib

#![feature(frontmatter)]
